syntax = "proto3";

package api.oms;

import "api/oms/api.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "errors.proto";

option go_package = "edu/api/oms;oms";
option java_multiple_files = true;
option java_package = "api.oms";

service Admin {
    rpc ListOrder (ListOrderRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/omsorderList"
        };
    };
    rpc GetOrder (GetOrderRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/omsorder/{id}"
        };
    };
    rpc CreateOrder (Order) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/omsorder"
            body: "*"
        };
    };
    rpc UpdateOrder (Order) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/omsorder"
            body: "*"
        };
    };
    rpc DeleteOrder (DeleteOrderRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/omsorder/{ids}"
        };
    };
    rpc ListCompanyAddress (ListCompanyAddressRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/omscompanyaddressList"
        };
    };
    rpc GetCompanyAddress (GetCompanyAddressRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/omscompanyaddress/{id}"
        };
    };
    rpc CreateCompanyAddress (CompanyAddress) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/omscompanyaddress"
            body: "*"
        };
    };
    rpc UpdateCompanyAddress (CompanyAddress) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/omscompanyaddress"
            body: "*"
        };
    };
    rpc DeleteCompanyAddress (DeleteCompanyAddressRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/omscompanyaddress/{ids}"
        };
    };
}

service Api {
    rpc ListOrder (ListOrderRequest) returns (ListOrderReply) {
        option (google.api.http) = {
            get: "/api/v1/oms/orderList"
        };
    };
    rpc GetOrder (GetOrderRequest) returns (GetOrderReply) {
        option (google.api.http) = {
            get: "/api/v1/oms/order/{id}"
        };
    };
    rpc CreateOrder (Order) returns (CreateOrderReply) {
        option (google.api.http) = {
            post: "/api/v1/oms/order"
            body: "*"
        };
    };
}

message ListOrderRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListOrderReply {}

message GetOrderRequest {
    int32 id = 1;
}
message GetOrderReply {}

message CreateOrderRequest {}
message CreateOrderReply {}

message UpdateOrderRequest {}
message UpdateOrderReply {}

message DeleteOrderRequest {
    string ids = 1;
}
message DeleteOrderReply {}

message ListCompanyAddressRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListCompanyAddressReply {}

message GetCompanyAddressRequest {
    int32 id = 1;
}
message GetCompanyAddressReply {}

message CreateCompanyAddressRequest {}
message CreateCompanyAddressReply {}

message UpdateCompanyAddressRequest {}
message UpdateCompanyAddressReply {}

message DeleteCompanyAddressRequest {
    string ids = 1;
}
message DeleteCompanyAddressReply {}
